# ChangeLog for dev-haskell/transformers
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/transformers/ChangeLog,v 1.4 2012/09/07 23:40:49 ago Exp $

  07 Sep 2012; Agostino Sarubbo <ago@gentoo.org> transformers-0.3.0.0.ebuild:
  Stable for amd64, wrt bug #421351

*transformers-0.3.0.0 (03 Jun 2012)

  03 Jun 2012; Mark Wright <gienah@gentoo.org> +transformers-0.3.0.0.ebuild:
  Bump transformers to 0.3.0.0 for haskell-platform-2012.2.0.0

  05 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org>
  transformers-0.2.2.0.ebuild:
  Propagated keywords from dev-haskell/mtl:
  alpha/ia64/ppc/ppc64/sparc/x86-fbsd/amd64-linux/x86-linux/ppc-
  macos/x86-macos/x86-solaris. Really tested alpha/ia64/sparc.

*transformers-0.2.2.0 (04 Dec 2011)

  04 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org> +metadata.xml,
  +transformers-0.2.2.0.ebuild:
  Initial version. Concrete functor and monad transformers (dev-haskell/monad-
  control dep)
